# MLOpsM1

./: README.md  best_params.json  model.py  pyproject.toml  spaceShip.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/learn/: events.out.tfevents
catboost_info/fold-1/test/: events.out.tfevents
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/learn/: events.out.tfevents
catboost_info/fold-2/test/: events.out.tfevents
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/learn/: events.out.tfevents
catboost_info/fold-3/test/: events.out.tfevents
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlops_hw1/: best_params.json  model.py
mlops_hw1/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/: optuna_experiment.ipynb  spaceShip.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
scripts/: predict.py  train.py
scripts/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
(+36 files in other folders)
